tests/typechecker/fail/025-array-elem-mismatch.hyg
let n = readInt();
let arr: array {int} = array(n, 40 + 2);

let mutable i = 0;
while (i < arrayLength(arr)) do {
    arrayElem(n, i) <- arrayElem(arr, i) + i;
    i <- i + 1
}; ()
